k8s/gatekeeper-servicemonitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatekeeper-controller-manager-metrics
  namespace: gatekeeper-system
  labels:
    app: gatekeeper
    release: kube-prometheus-stack
spec:
  ports:
  - name: metrics
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    control-plane: controller-manager
    gatekeeper.sh/operation: webhook
